--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* General Styles */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -7,10 +6,11 @@ body {
   color: #1a202c;
 }
 
+
 .container {
   display: flex;
-  flex-wrap: nowrap; /* Prevent columns from stacking */
-  max-width: 700px; /* Slightly wider for print */
+  flex-wrap: nowrap; 
+  max-width: 750px; 
   margin: 20px auto;
   background-color: #ffffff;
   border-radius: 8px;
@@ -23,7 +23,7 @@ body {
   flex: 1; /* Fix column size */
   max-width: 300px; /* Ensure width consistency */
   background-color: #B3C8CF;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
 }
 
@@ -58,21 +58,10 @@ body {
   color: black;
 }
 
-
-/* Left Column */
-.left-column {
-  flex: 1;
-  max-width: 300px;
-  background-color: #B3C8CF;
-  padding: 20px;
-  text-align: center;
-}
-
-/* Section Headers */
 .clickable-section {
   cursor: pointer;
   display: block;
-  background-color: #78B3CE; /* Green for distinction */
+  background-color: #78B3CE; 
   color: black;
   padding: 10px 15px;
   font-family: 'Arial', sans-serif;
@@ -83,19 +72,20 @@ body {
   text-align: left;
 }
 
+
 .clickable-section:hover {
   background-color: #e0f7ff;
   transform: scale(1.05);
   border: 2px solid #0073e6;
 }
 
-/* Toggle Functionality for Sections */
+
 input[type="checkbox"] {
-  display: none; /* Hide the checkbox */
+  display: none; 
 }
 
 input[type="checkbox"]:checked + .expandable-list {
-  max-height: 1000px; /* Allow the section to fully expand */
+  max-height: 1000px; 
   opacity: 1;
   transition: max-height 0.5s ease, opacity 0.5s ease;
 }
@@ -105,14 +95,14 @@ input[type="checkbox"]:checked + .expandable-list {
   overflow: hidden;
   opacity: 0;
   transition: max-height 0.5s ease, opacity 0.5s ease;
-  background-color: #e8f5e9; /* Light green */
+  background-color: #e8f5e9; 
   border-left: 3px solid #4caf50;
   padding: 10px 15px;
   margin: 10px 0;
   border-radius: 5px;
 }
 
-/* General Info Styling */
+
 .general-info .expandable-list li {
   display: flex;
   align-items: center;
@@ -143,7 +133,7 @@ input[type="checkbox"]:checked + .expandable-list {
   font-weight: bold;
 }
 
-/* Academic Credentials Styling */
+
 .academic-credentials .expandable-list li {
   padding: 8px;
   font-size: 1rem;
@@ -227,7 +217,7 @@ input[type="checkbox"]:checked + .expandable-list {
   transition: background-color 0.3s ease, color 0.3s ease, border 0.3s ease;
 }
 
-/* Hover effect on labels */
+
 .toggle-label:hover {
   background-color: #e0f7ff;
   color: #0056b3;
@@ -294,12 +284,12 @@ input[type="checkbox"]:checked + .expandable-list {
   }
 
   .left-column {
-      max-width: 35%; /* Adjust for small screens */
+      max-width: 40%; /* Adjust for small screens */
   }
 
   .right-column {
       flex: 2;
-      max-width: calc(100% - 35%); /* Adapt width for smaller screens */
+      max-width: calc(100% ); /* Adapt width for smaller screens */
   }
 }
 
